--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="style.css" />
-    <title>Guess My Number!</title>
+    <title>נחש תמספר!</title>
   </head>
   <body>
     <header>
-      <h1>Guess My Number!</h1>
+      <h1>נחש תמספר!</h1>
       <p class="between">(Between 1 and 20)</p>
       <button class="btn again">Again!</button>
+      <img class="win-image hidden" src="images/PIC1.png" alt="win image" />
       <div class="number">?</div>
     </header>
     <main>
