--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
 
   againBtn.addEventListener('click', function() {
 document.querySelector('.message').textContent = 'יאללה שוב';
-score = 20
+score = 20;
 Num = Math.trunc(Math.random() * 20) + 1;
-document.querySelector('.score').textContent = score
-document.querySelector('.number').textContent = "?"
-document.querySelector('.guess').value = ''
+document.querySelector('.score').textContent = score;
+document.querySelector('.number').textContent = "?";
+document.querySelector('.guess').value = '';
 document.querySelector('.win-image').classList.add('hidden');
   document.querySelector('body').style.backgroundColor = '#222';
   document.querySelector('.number').style.width = '15rem';
