--- a/index.html
+++ b/index.html
@@ -1,52 +1,34 @@
-  'use strict';
- 
-
-
-  
-  let Num = Math.trunc(Math.random() * 20) + 1;
-  let score = 20;
-
-  document.querySelector('.check').addEventListener('click', function () {
-    let guess = Number(document.querySelector('.guess').value);
-    
-    if (!guess) {
-      document.querySelector('.message').textContent = 'לא הכנסת מספר';
-    } else if (guess === Num) {
-      document.querySelector('.message').textContent = 'צדקת!!💕😶‍🌫️';
-      document.querySelector('body').style.backgroundColor = '#006400';
-      document.querySelector('.number').style.width = '30rem';
-      document.querySelector('.win-image').classList.remove('hidden');
-      document.querySelector('.number').textContent = Num;
-    } else if (guess > Num) {
-      if (score > 0) {
-        document.querySelector('.message').textContent = `${guess} is greater than ${Num}`;
-        score--;
-        document.querySelector('.score').textContent = score;
-      } else {
-        document.querySelector('.message').textContent = 'you lost';
-      }
-    } else if (guess < Num) {
-      if (score > 0) {
-        document.querySelector('.message').textContent = `${guess} is smaller than ${Num}`;
-        score--;
-        document.querySelector('.score').textContent = score;
-      } else {
-        document.querySelector('.message').textContent = 'you lost';
-      }
-    }
-  });
-  const againBtn = document.querySelector('.again');
-  console.log('again button:', againBtn);
-
-  againBtn.addEventListener('click', function() {
-document.querySelector('.message').textContent = 'יאללה שוב';
-score = 20;
-Num = Math.trunc(Math.random() * 20) + 1;
-document.querySelector('.score').textContent = score;
-document.querySelector('.number').textContent = "?";
-document.querySelector('.guess').value = '';
-document.querySelector('.win-image').classList.add('hidden');
-  document.querySelector('body').style.backgroundColor = '#222';
-  document.querySelector('.number').style.width = '15rem';
-});
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="style.css" />
+    <title>נחש תמספר!</title>
+  </head>
+  <body>
+    <header>
+      <h1>נחש תמספר!</h1>
+      <p class="between">(Between 1 and 20)</p>
+      <button class="btn again">Again!</button>
+      <img class="win-image hidden" src="images/PIC1.png" alt="win image" />
+      <div class="number">?</div>
+    </header>
+    <main>
+      <section class="left">
+        <input type="number" class="guess" />
+        <button class="btn check">Check!</button>
+      </section>
+      <section class="right">
+        <p class="message">Start guessing...</p>
+        <p class="label-score">💯 Score: <span class="score">20</span></p>
+        <p class="label-highscore">
+          🥇 Highscore: <span class="highscore">0</span>
+        </p>
+      </section>
+    </main>
+    <script src="script.js"></script>
+  </body>
+</html>
+dsd
